fix images not visible when deployed

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 @media (orientation: portrait) {
   body {
-    background-image: url('../img/IMG_3050-small.jpg');
+    background-image: url('/img/IMG_3050-small.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center top;
@@ -20,7 +20,7 @@
 
 @media (orientation: landscape) {
   body {
-    background-image: url('../img/IMG_3049-small.jpg');
+    background-image: url('/img/IMG_3049-small.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center top;
@@ -33,12 +33,12 @@
 
 @media (min-width: 767px) and (orientation: portrait) {
   body {
-    background-image: url('../img/IMG_3050-large.jpg');
+    background-image: url('/img/IMG_3050-large.jpg');
   }
 }
 
 @media (min-width: 767px) and (orientation: landscape) {
   body {
-    background-image: url('../img/IMG_3049-large.jpg');
+    background-image: url('/img/IMG_3049-large.jpg');
   }
 }
